--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         body{font-family: 'SCDream', 'Noto Sans KR', 'Apple SD Gothic Neo', Helvetica, sans-serif;}
         a{color: #3b393a; text-decoration: none;}
         code{background-color: #f8f8f8; border: 1px solid #ddd; border-radius: 5px; box-shadow: 0 1px 1px -1px rgb(0 0 0 / 15%); padding: 3px 5px;}
+        hr{opacity:.18;}
         .wrapper{position:relative;}
         .container{position:relative; width:100%; max-width:1280px; margin:0 auto; padding: 20px 20px;}
         .list-pagelink{margin-bottom:60px;}
@@ -78,6 +79,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -101,6 +103,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -133,6 +136,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -149,6 +153,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -165,6 +170,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -175,20 +181,21 @@
                                     </p>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
-                                            <a href="../jsfuture/clipdown/2022/webview/clipdownplus/popup_mobileAuth/sms_mobileAuth_register_authNum.html" target="_blank">휴대폰번호 수집 팝업</a>
+                                            <a href="../jsfuture/clipdown/2022/webview/clipdownplus/popup_mobileAuth/sms_mobileAuth_register_authNum.html" target="_blank">휴대폰번호 수집 팝업</a>
                                             <span class="float-end">2022.11.23</span>
                                             <div class="alert">
                                                 <p class="lead lead_text">휴대폰 SMS 인증, 인증번호 입력, 휴대폰번호 등록</p>                                                
                                             </div>
                                         </li>
                                         <li class="list-group-item">
-                                            <a href="../jsfuture/clipdown/2022/webview/clipdownplus/popup_mobileAuth/sms_mobileAuth_guide_authNum.html" target="_blank">휴대폰번호 수집 예외 케이스 팝업</a>
+                                            <a href="../jsfuture/clipdown/2022/webview/clipdownplus/popup_mobileAuth/sms_mobileAuth_guide_authNum.html" target="_blank">휴대폰번호 수집 예외 케이스 팝업</a>
                                             <span class="float-end">2022.11.23</span>
                                             <div class="alert">
                                                 <p class="lead lead_text">인증번호 불일치, 인증번호 실패, 인증번호 발송초과, 이미 등록 된 휴대폰</p>                                                
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -205,6 +212,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -229,6 +237,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -246,6 +255,7 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <hr />
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
@@ -259,7 +269,7 @@
                                             <a href="../jsfuture/clipdown/2022/webview/clipdownplus/popup_mobileAuth/modal_form.html" target="_blank">Modal(Alert) 폼</a>
                                             <span class="float-end">2022.11.30</span>
                                             <div class="alert">
-                                                <p class="lead lead_text">안내 메세지의 경우 <p> 태그로 한줄일때, 두줄일때 구분</p>                                                
+                                                <p class="lead lead_text">안내 메세지의 경우  p태그로 한줄일때, 두줄일때 구분</ㅠ>                                                
                                             </div>
                                         </li>
                                     </ul>
