--- a/index.html
+++ b/index.html
@@ -49,7 +49,30 @@
             </div>
             <div class="tab-content" id="pills-tabContent">
                 <!-- 2022 퍼블리싱작업 영역 -->
-                <div class="tab-pane fade show active" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">       
+                <div class="tab-pane fade show active" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">    
+                    <section class="contents_section">
+                        <article class="list-pagelink">
+                            <div class="card">
+                                <div class="card-header">
+                                    <span>부가서비스 광고 추가 디자인 작업 </span>
+                                    <span class="float-end">2022.12.14</span>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text"> 
+                                        - 클립다운 프로그램 팝업창 내 노출 될 부가서비스 광고영역 (통시사 선택 영역 ) 퍼블리싱 작업 <br />
+                                        - 12.13 부가서비스 추가 이미지 디자인 작업 <br />
+                                        - 12.14 퍼블리싱 작업, 이미지영역 롤링 기능 추가 작업
+                                    </p>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/misc/ad/popup_ad_carrier/ads_service_slider.html" target="_blank">부가서비스 광고 디자인 작업</a>
+                                            <span class="float-end">2022.08.26</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </article>
+                    </section>   
                     <section class="contents_section">
                         <article class="list-pagelink">
                             <div class="card">
