--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
                                 <div class="card-body">
                                     <p class="card-text"> 
                                         - 클립다운 프로그램 팝업창 내 노출 될 부가서비스 광고영역 (통시사 선택 영역 ) 퍼블리싱 작업 <br />
-                                        - 12.13 부가서비스 추가 이미지 디자인 작업 <br />
-                                        - 12.14 퍼블리싱 작업, 이미지영역 롤링 기능 추가 작업
                                     </p>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
                                             <a href="../jsfuture/misc/ad/popup_ad_carrier/ads_service_slider.html" target="_blank">부가서비스 광고 디자인 작업</a>
                                             <span class="float-end">2022.08.26</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- 12.13 부가서비스 추가 이미지 디자인 작업</p>
+                                                <p class="lead lead_text">- 12.14 퍼블리싱 작업, 이미지영역 롤링 기능 추가 작업</p>                                                
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
