--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
-                                        - 클립다운 프로그램 팝업창 내 노출 될 부가서비스 광고영역 (통시사 선택 영역 ) 퍼블리싱 작업 <br />
+                                        - 클립다운 프로그램 팝업창 내 노출 될 신규 부가서비스 이미지 작업(상단 헤더영역 이미지화) <br />
+                                        - 광고영역 이미지 롤링기능 추가<br />
                                     </p>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
