--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text"> 
-                                        - 클립다운 프로그램 팝업창 내 노출 될 신규 부가서비스 이미지 작업(상단 헤더영역 이미지화) <br />
-                                        - 광고영역 이미지 롤링기능 추가<br />
+                                        - 클립다운 프로그램 팝업창 내 노출 될 신규 부가서비스 템플릿 변경 및 이미지 작업 <br />
                                     </p>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
                                             <a href="../jsfuture/misc/ad/popup_ad_carrier/ads_service_slider.html" target="_blank">부가서비스 광고 디자인 작업</a>
                                             <span class="float-end">2022.08.26</span>
                                             <div class="alert">
-                                                <p class="lead lead_text">- 12.13 부가서비스 추가 이미지 디자인 작업</p>
+                                                <p class="lead lead_text">- 12.13 부가서비스 추가 이미지 디자인 작업 (상단 헤더영역 이미지화)</p>
                                                 <p class="lead lead_text">- 12.14 퍼블리싱 작업, 이미지영역 롤링 기능 추가 작업</p>                                                
                                             </div>
                                         </li>
