--- a/misc/ad/clipdownplus_popup/join_mobileAuth_type03.html
+++ b/misc/ad/clipdownplus_popup/join_mobileAuth_type03.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="wrap webview_popup_join style01">
+    <div class="wrap webview_popup_join style_03">
       <section class="content_box">
         <div class="item_title">
           <h2>휴대폰 SMS 인증 완료 후<br /> 서비스 이용이 가능합니다.</h2>
