--- a/index.html
+++ b/index.html
@@ -49,7 +49,34 @@
             </div>
             <div class="tab-content" id="pills-tabContent">
                 <!-- 2022 퍼블리싱작업 영역 -->
-                <div class="tab-pane fade show active" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">    
+                <div class="tab-pane fade show active" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">   
+                    <section class="contents_section">
+                        <article class="list-pagelink">
+                            <div class="card">
+                                <div class="card-header">
+                                    <span>부가서비스 광고 추가 디자인 작업 </span>
+                                    <span class="float-end">2022.12.21</span>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text"> 
+                                        - 클립다운 프로그램 팝업창 내 노출 될 신규 부가서비스 템플릿 변경 및 이미지 작업 <br />
+                                        - 작업내용 : https://jsfuture.atlassian.net/browse/PMT-241 <br />
+                                    </p>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/misc/ad/clipdownplus_popup/join_mobileAuth.html" target="_blank">Webview 휴대폰 인증 광고 가입 팝업 퍼블리싱 작업 2차</a>
+                                            <span class="float-end">2022.12.21</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- 가입팝업을 통한 가입률 향상을 위한 디자인 레이아웃 및 스타일 2차 작업</p> 
+                                                <p class="lead lead_text">- 전체 마크업 구조 및 스타일 변경</p>                                            
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </article>
+                    </section> 
+                    
                     <section class="contents_section">
                         <article class="list-pagelink">
                             <div class="card">
@@ -64,7 +91,7 @@
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
                                             <a href="../jsfuture/misc/ad/popup_ad_carrier/ads_service_slider.html" target="_blank">부가서비스 광고 디자인 작업</a>
-                                            <span class="float-end">2022.08.26</span>
+                                            <span class="float-end">2022.12.14</span>
                                             <div class="alert">
                                                 <p class="lead lead_text">- 12.13 부가서비스 추가 이미지 디자인 작업 (상단 헤더영역 이미지화)</p>
                                                 <p class="lead lead_text">- 12.14 퍼블리싱 작업, 이미지영역 롤링 기능 추가 작업</p>                                                
