--- a/misc/ad/clipdownplus_popup/join_mobileAuth_type01.html
+++ b/misc/ad/clipdownplus_popup/join_mobileAuth_type01.html
@@ -10,7 +10,8 @@
     <meta name="format-detection" content="telephone=no" />
     <title>webview 휴대폰 인증 회원가입</title>
     <link rel='stylesheet' href='./resource/css/common.css' type='text/css'>
-    <link rel='stylesheet' href='./resource/css/style.css' type='text/css'>
+    <!-- <link rel='stylesheet' href='./resource/css/style.css' type='text/css'> -->
+    <link rel='stylesheet' href='./resource/css/style_ex.css' type='text/css'>
     <link rel='stylesheet' href='./resource/font/font.css' type='text/css'>
 
     <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
