--- a/index.html
+++ b/index.html
@@ -64,12 +64,22 @@
                                     </p>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
-                                            <a href="../jsfuture/misc/ad/clipdownplus_popup/join_mobileAuth.html" target="_blank">Webview 휴대폰 인증 광고 가입 팝업 퍼블리싱 작업 2차</a>
+                                            <a href="../jsfuture/misc/ad/clipdownplus_popup/join_mobileAuth.html" target="_blank">Webview 휴대폰 인증 광고 가입 팝업 퍼블리싱 작업 2차 - 최종</a>
                                             <span class="float-end">2022.12.21</span>
                                             <div class="alert">
                                                 <p class="lead lead_text">- 가입팝업을 통한 가입률 향상을 위한 디자인 레이아웃 및 스타일 2차 작업</p> 
                                                 <p class="lead lead_text">- 전체 마크업 구조 및 스타일 변경</p>                                            
                                             </div>
+                                        </li>
+                                    </ul>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/misc/ad/clipdownplus_popup/join_mobileAuth_type01.html" target="_blank">[Sample]광고 가입 팝업 퍼블리싱 작업 1차 - Type01</a>
+                                            <span class="float-end">2022.12.20</span>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/misc/ad/clipdownplus_popup/join_mobileAuth_type02.html" target="_blank">[Sample]광고 가입 팝업 퍼블리싱 작업 1차 - Type02</a>
+                                            <span class="float-end">2022.12.20</span>
                                         </li>
                                     </ul>
                                 </div>
