--- a/misc/ad/clipdownplus_popup/join_mobileAuth.html
+++ b/misc/ad/clipdownplus_popup/join_mobileAuth.html
@@ -69,7 +69,8 @@
                                 </div>
                               </div>
                               <div class="col-4">
-                                <a href="#" class="btn_apply">확인</a>
+                                <!-- <a href="#" class="btn_apply">확인</a> -->
+                                <button id="confirm_apply_button" class="btn_apply">확인</button>
                               </div>
                             </div>
                           </div>
