--- a/misc/ad/clipdownplus_popup/join_mobileAuth.html
+++ b/misc/ad/clipdownplus_popup/join_mobileAuth.html
@@ -138,9 +138,9 @@
             </div>
             <div class="item_content">              
                 <div class="btn-box">
+                  <p class="help_box help-text">인플메이트는 매월 부가세포함 3,300원이 요금에 합산 청구됩니다.</p>
                   <div href="#" class="btn_full_point">다음</div>
                 </div>
-              </a>
             </div>
           </div> 
         </div>
