--- a/misc/ad/clipdownplus_popup/join_mobileAuth.html
+++ b/misc/ad/clipdownplus_popup/join_mobileAuth.html
@@ -25,7 +25,7 @@
     <div class="wrap webview_popup_join style01">
       <section class="content_box">
         <div class="item_title">
-          <h2>휴대폰 SMS 인증 완료 후<br /> 서비스 이용이 가능합니다.</h2>
+          <h2>휴대폰 SMS 인증 완료 후<br /> 클립다운 PLUS+를 이용 가능합니다.</h2>
         </div>
         <div class="item_top">
           <div class="img_banner">
@@ -126,7 +126,7 @@
                         <div class="check_form-group">
                           <label class="cb">
                             <input type="checkbox" name="agree" value="">
-                            <a href="#">만 14세 이상입니다.</a>                            
+                            <a href="#" class="disabled">만 14세 이상입니다.</a>                            
                             <span></span>
                           </label>
                         </div>
@@ -139,7 +139,7 @@
             <div class="item_content">              
                 <div class="btn-box">                  
                   <div href="#" class="btn_full_point">다음</div>
-                  <p class="help_box help-text">인플메이트는 매월 부가세포함 3,300원이 요금에 합산 청구됩니다.</p>
+                  <p class="help_box help-text">서비스 이용 시 매월 이용료 3,300원이 발생합니다.</p>
                 </div>
             </div>
           </div> 
