--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
             <div>
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="pills-2022-tab" data-bs-toggle="pill" data-bs-target="#pills-2022" type="button" role="tab" aria-controls="pills-2022" aria-selected="true">2022</button>
+                        <button class="nav-link active" id="pills-2023-tab" data-bs-toggle="pill" data-bs-target="#pills-2023" type="button" role="tab" aria-controls="pills-2023" aria-selected="true">2023</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="pills-2022-tab" data-bs-toggle="pill" data-bs-target="#pills-2022" type="button" role="tab" aria-controls="pills-2022" aria-selected="true">2022</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="pills-2021-tab" data-bs-toggle="pill" data-bs-target="#pills-2021" type="button" role="tab" aria-controls="pills-2021" aria-selected="true">2021</button>
@@ -48,8 +51,53 @@
                 </ul>
             </div>
             <div class="tab-content" id="pills-tabContent">
+                <!-- 2023 퍼블리싱작업 영역 -->
+                <div class="tab-pane fade show active" id="pills-2023" role="tabpanel" aria-labelledby="pills-2023-tab">
+                    <section class="contents_section">
+                        <article class="list-pagelink">
+                            <div class="card">
+                                <div class="card-header">
+                                    <span>클립다운 캐시메이트 서비스 공통 UI 페이지 작업 </span>
+                                    <span class="float-end">2023.05.-</span>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text"> 
+                                        - 클립다운 프로그램 PC Webview 페이지별 UI 스타일 작업 <br />
+                                        - 작업내용 : https://jsfuture.atlassian.net/browse/PMT-269?atlOrigin=eyJpIjoiMTQ4OGUyZTdmM2ZjNGI4NDkyZTEzNjRiNGVmMmEzZGIiLCJwIjoiaiJ9 <br />
+                                    </p>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/clipdown/2023/webview/reward/mypage/mypage.html" target="_blank">마이페이지</a>
+                                            <span class="float-end">2023.00.00</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- 가입팝업을 통한 가입률 향상을 위한 디자인 레이아웃 및 스타일 2차 작업</p> 
+                                                <p class="lead lead_text">- 전체 마크업 구조 및 스타일 변경</p>                                            
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/clipdown/2023/webview/reward/mypage/errorpage.html" target="_blank">에러페이지</a>
+                                            <span class="float-end">2023.00.00</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- 가입팝업을 통한 가입률 향상을 위한 디자인 레이아웃 및 스타일 2차 작업</p> 
+                                                <p class="lead lead_text">- 전체 마크업 구조 및 스타일 변경</p>                                            
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/clipdown/2023/webview/reward/view/download_section.html" target="_blank">시청화면페이지 - 포인트 적립 안내 툴팁</a>
+                                            <span class="float-end">2023.00.00</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- 유튜브 플레이어 하단 구간 다운로드의 좌측 영역 포인트 적립안내 툴팁 추가</p> 
+                                                <p class="lead lead_text">- 전체 마크업 구조 및 스타일 변경</p>                                            
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>                            
+                        </article>
+                    </section>
+                </div>
                 <!-- 2022 퍼블리싱작업 영역 -->
-                <div class="tab-pane fade show active" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">   
+                <div class="tab-pane fade show" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">   
                     <section class="contents_section">
                         <article class="list-pagelink">
                             <div class="card">
@@ -389,7 +437,7 @@
                                             </div>
                                         </li>
                                         <li class="list-group-item">
-                                            <a href="../jsfuture/clipdown/2022/webview/inflmate/policy/member.htmlㄴ" target="_blank">통합 이용약관 페이지</a>
+                                            <a href="../jsfuture/clipdown/2022/webview/inflmate/policy/member.html" target="_blank">통합 이용약관 페이지</a>
                                             <span class="float-end">2022.07.12</span>
                                             <div class="alert">
                                                 <p class="lead lead_text">테스트 로컬 내 페이지 작업</p>
