--- a/index.html
+++ b/index.html
@@ -95,6 +95,32 @@
                             </div>                            
                         </article>
                     </section>
+                    <section class="contents_section">
+                        <article class="list-pagelink">
+                            <div class="card">
+                                <div class="card-header">
+                                    <span>[공유하기페이지] 공유 이벤트 디자인 작업 </span>
+                                    <span class="float-end">2023.02.01</span>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text"> 
+                                        - Web 공유하기페이지에서 공유 이벤트  디자인 작업 <br />
+                                        - 클립다운 PC / APP 시청화면페이지의 플레이어 좌측 하단영역 이벤트 배너 노출 작업 (구간다운로드 버튼 영역))
+                                    </p>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <a href="../jsfuture/clipdown/2023/webview/promotion_view/download_section_event.html" target="_blank">시청화면페이지 이벤트 배너 </a>
+                                            <span class="float-end">2023.02.00</span>
+                                            <div class="alert">
+                                                <p class="lead lead_text">- </p>
+                                                <p class="lead lead_text">- </p>                                                
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </article>
+                    </section>   
                 </div>
                 <!-- 2022 퍼블리싱작업 영역 -->
                 <div class="tab-pane fade show" id="pills-2022" role="tabpanel" aria-labelledby="pills-2022-tab">   
