--- a/misc/ad/clipdownplus_popup/join_mobileAuth_target.html
+++ b/misc/ad/clipdownplus_popup/join_mobileAuth_target.html
@@ -32,7 +32,9 @@
               <span class="summary">월 이용료 3,330원</span>
           </div>
           <div class="item_img">
+            <div class="inner">
               <img src="./resource/images/img_popup_authentication_join.png" alt="">
+            </div>              
           </div>
         </div>
         <!-- // 0828 스타일 변경 작업 : 상단영역  -->  
