--- a/misc/recruit/jsf_job_230831/jsf_job.html
+++ b/misc/recruit/jsf_job_230831/jsf_job.html
@@ -18,6 +18,7 @@
 				</td>
 			</tr>
 		</table>
+		<!-- JOBKOREA html 등록 -->
 		<!--// 여기서부터 넣어주세요. --> 
 		<div class="detailReadImg" id="secDetailRead"> 
 			<div id="wrap">
