--- a/misc/recruit/jsf_job_230831/jsf_job.html
+++ b/misc/recruit/jsf_job_230831/jsf_job.html
@@ -65,6 +65,23 @@
 				</div> 
 			</div> 
 		</div> 
-		<!-- 여기까지 넣어주세요. //-->                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                	
+		<!-- 여기까지 넣어주세요. //-->       
+		
+		<!--// 여기서부터 넣어주세요. --> 
+		<div class="detailReadImg" id="secDetailRead"> 
+			<div id="wrap"> 
+				<div id="container"> 
+					<div class="secDetailWrap"> 
+						<p style=" margin: 0px auto; position: relative;">
+							<img src="https://file1.jobkorea.co.kr/Mng/2023/10/jsfuture2015_1005_01.png" alt="2023년 하반기 각 부문 신입/경력 수시채용 모집" usemap="#imagemap">
+							<map name="imagemap" style="display: inline;">
+								<area shape="rect" coords="40,7530,850,7614" href="https://im.jsfuture.co.kr/" target="_blank" alt="[노션] 제이스퓨처">
+							</map>
+						</p>
+					</div> 
+				</div> 
+			</div> 
+		</div> 
+		<!-- 여기까지 넣어주세요. //-->   
 	</body>
 </html>
