--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -221,11 +221,12 @@ $('.slider').slick({
   initialSlide:1,
   accessibility: true,
   infinite: true,
-  speed: 500,
+  speed: 300,
   autoplay: true,
   autoplaySpeed: 2000,
+  loop: true,
   fade: true,
-  cssEase: 'linear'
+  cssEase: 'linear',
 });
 </script>
 
