--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="stylesheet" href="https://codepen.io/GreenSock/pen/ZEGdQLM/7ba936b34824fefdccfe2c6d9f0b740b.css">
+  <link rel="stylesheet" href="./resource/css/jquery.fullpage.min.css"/>  
   <link rel="stylesheet" href="./resource/js/slick/slick.css"/>
   <link rel="stylesheet" href="./resource/css/style.css">
 </head>
@@ -187,18 +188,22 @@
 <!-- partial -->
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js'></script>
-
-
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="./resource/js/jquery.fullpage.min.js"></script>
 <script src="./resource/js/clipboard.min.js"></script>
 <script src="./resource/js/script.js"></script>
 
 <script>
-  new fullpage('#fullpage', {
-    //options here
-    autoScrolling:true,
-    scrollHorizontally: true
-  });
+$(document).ready(function() {
+	$('#fullpage').fullpage({
+		//options here
+    css3: true,
+    scrollingSpeed: 700,
+		autoScrolling:true,
+		scrollHorizontally: true,
+    sectionSelector: '.section'
+	});
+});
 </script>
 
 <script>
@@ -215,19 +220,19 @@ clipboard.on('success', function(e) {
 </script>
 
 <script>
-$('.slider').slick({
-  dots: true,
-  arrows: false,
-  initialSlide:1,
-  accessibility: true,
-  infinite: true,
-  speed: 300,
-  autoplay: true,
-  autoplaySpeed: 2000,
-  loop: true,
-  fade: true,
-  cssEase: 'linear',
-});
+// $('.slider').slick({
+//   dots: true,
+//   arrows: false,
+//   initialSlide:1,
+//   accessibility: true,
+//   infinite: true,
+//   speed: 300,
+//   autoplay: true,
+//   autoplaySpeed: 2000,
+//   loop: true,
+//   fade: true,
+//   cssEase: 'linear',
+// });
 </script>
 
 
