--- a/misc/searchAD/index.html
+++ b/misc/searchAD/index.html
@@ -195,6 +195,15 @@
 <script src="./resource/js/jquery.fullpage.min.js"></script>
 <script src="./resource/js/clipboard.min.js"></script>
 <script src="./resource/js/script.js"></script>
+<script>
+  // 모바일 웹 100vh 세로 사이즈 문제해결
+function setScreenSize() {
+	let vh = window.innerHeight * 0.01;
+	document.documentElement.style.setProperty('--vh', `${vh}px`);
+}
+setScreenSize();
+window.addEventListener('resize', setScreenSize);
+</script>
 
 <script>
 $(document).ready(function() {
